fix(style-image-card): fix the wrong stretching images on the project card

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,13 @@
         min-width: 80% !important;
         margin-bottom: 15%;
     }
-    .card-body{
+
+    .card-img-top {
+        width: 100%;
+        max-width: 100%;
+        object-fit: cover;
+        display: block;
+    }
         padding-bottom: 20px;
     }
     .title{
